- Added /kcp option to quickly search a single player's stats summary

v0.7 changelog:
- Only season checkbox is enabled for player lookup
- Removed all data view
- Added checkboxes to improve filtering 
- Removed number of system messages
- Added update message on first login after update
- Fixed RISE and FALL dungeon shortcuts
- Added option to automatically fail a run (set it to abandoned) by typing /kcfail